# CodeGeass

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  install.sh  mkdocs.yml  pyproject.toml  requirements.txt  uninstall.sh
.claude/: settings.local.json
.claude/skills/: release.md
.github/workflows/: ci.yml  docs.yml  release.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/cli/: index.html
0.1/search/: search_index.json
0.1/stylesheets/: extra.css
0.1/troubleshooting/: index.html
0.2/: 404.html  index.html  sitemap.xml
0.2/cli/: index.html
0.2/search/: search_index.json
0.2/stylesheets/: extra.css
0.2/troubleshooting/: index.html
config/: notifications.example.yaml  notifications.yaml  schedules.example.yaml  schedules.yaml  settings.yaml
dashboard/: ARCHITECTURE.md  CLI_REFERENCE.md  README.md  run.sh  setup.sh
dashboard/backend/: README.md  config.py  dependencies.py  main.py  requirements.txt
dashboard/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dev/: 404.html  index.html  sitemap.xml
dev/cli/: index.html
dev/search/: search_index.json
dev/troubleshooting/: index.html
docs/: IMPLEMENTATION_PLAN_ISSUE_6.md  index.md  troubleshooting.md
docs/cli/: approval.md  cron.md  execution.md  index.md  logs.md  notification.md  project.md  provider.md  scheduler.md  task.md
scripts/: build-dashboard.sh  cron-runner.sh
service/: codegeass-scheduler.service  codegeass-scheduler.timer  install.sh  uninstall.sh
tests/: __init__.py  test_executor.py  test_teams_provider.py
(+228 files in other folders)
